--- a/dockerCassandra/docker-compose.yml
+++ b/dockerCassandra/docker-compose.yml
@@ -14,10 +14,16 @@ services:
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
       - CASSANDRA_USER=cassandra
       - CASSANDRA_PASSWORD=cassandrapassword
+      - CASSANDRA_PASSWORD_SEEDER=yes
+      - MAX_HEAP_SIZE=2G
+      - HEAP_NEWSIZE=200M
     ports:
+      - "7001:7000"
       - "9042:9042"
+    volumes:
+      - cassandra1_data:/bitnami/cassandra
     networks:
-      cassandranet:
+      - cassandranet
 
   cassandra2:
     image: docker.io/bitnami/cassandra:latest
@@ -33,11 +39,21 @@ services:
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
       - CASSANDRA_USER=cassandra
       - CASSANDRA_PASSWORD=cassandrapassword
+      - CASSANDRA_PASSWORD_SEEDER=yes
+      - MAX_HEAP_SIZE=2G
+      - HEAP_NEWSIZE=200M
     ports:
+      - "7002:7000"
       - "9043:9042"
+    volumes:
+      - cassandra2_data:/bitnami/cassandra
     networks:
-      cassandranet:
+      - cassandranet
 
 networks:
   cassandranet:
     driver: bridge
+
+volumes:
+  cassandra1_data:
+  cassandra2_data:
