finalne zmianyy dodanie local_quorum by było widoczne

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,4 +4,10 @@ datastax-java-driver {
       class = "org.example.config.NbdAddressTranslator"
     }
   }
+   basic {
+      request {
+        consistency = "LOCAL_QUORUM"
+        serial-consistency = "SERIAL"
+      }
+    }
 }
